# data-boar

./: .cursorrules  .dockerignore  .editorconfig  .env.example  .gitignore  .gitleaks.toml  .grype.yaml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.pt_BR.md  CONTRIBUTING.md  CONTRIBUTING.pt_BR.md  Dockerfile  LICENSE  NOTICE  PRIVACY_POLICY.md  PRIVACY_POLICY.pt_BR.md  QUICKSTART.md  README.md  README.pt_BR.md  SECURITY.md  SECURITY.pt_BR.md  TERMS_OF_USE.md  TERMS_OF_USE.pt_BR.md  audit.ps1  main.py  pyproject.toml  requirements.txt  sonar-project.properties
.cursor/: hooks.json
.cursor/hooks/: adr-protection.ps1  adr-protection.sh  pre-commit
.cursor/rules/: adr-inventory-ritual.mdc  agent-autonomous-merge-and-lab-ops.mdc  agent-roles-executor-vs-auditor.mdc  agent-session-ritual-sync-main-and-private-stack.mdc  ats-locale-aware-recommendations.mdc  audience-segmentation-docs.mdc  check-all-gate.mdc  clean-slate-pii-self-audit.mdc  collaboration-maintainer-contributor.mdc  cursor-browser-social-sso-hygiene.mdc  cursor-markdown-preview-guardrail.mdc  docs-plans.mdc  execution-priority-and-pr-batching.mdc  git-pr-sync-before-advice.mdc  hub-pattern.mdc  lab-completao-workflow.mdc  lab-lessons-learned-archive.mdc  lab-op-systems-context.mdc  pre-commit-ruff.mdc  (+19 more)
.githooks/: commit-msg
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml
api/: rbac.py  routes.py  webauthn_html_gate.py  webauthn_routes.py
cli/: reporter.py
codeql-custom-queries-python/: codeql-pack.yml
config/: loader.py  plugin_schema.yaml  plugin_validator.py  redact_config.py  scope_import_glpi.py
connectors/: dataverse_connector.py  filesystem_connector.py  inventory_details.py  mongodb_connector.py  powerbi_connector.py  redis_connector.py  rest_connector.py  sharepoint_connector.py  smb_connector.py  sql_connector.py  sql_driver_deps.py  sql_sampling.py  url_guard.py  webdav_connector.py
core/: about.py  archives.py  brazilian_cpf.py  connector_registry.py  database.py  detector.py  discovery_orchestrator.py  dsar_export.py  engine.py  enterprise_surface_posture.py  forwarded_headers.py  host_resolution.py  integrity_anchor.py  learned_patterns.py  prefilter.py
deploy/: README.md  docker-compose.override.example.yml  docker-compose.yml
docs/: ACADEMIC_USE_AND_THESIS.md  ACADEMIC_USE_AND_THESIS.pt_BR.md  AUDIENCE_GUIDE.md  AUDIENCE_GUIDE.pt_BR.md  CLAIMS.yml  CODE_PROTECTION_OPERATOR_PLAYBOOK.md  CODE_PROTECTION_OPERATOR_PLAYBOOK.pt_BR.md  COMPLIANCE_AND_LEGAL.md  COMPLIANCE_AND_LEGAL.pt_BR.md  COMPLIANCE_FRAMEWORKS.md  COMPLIANCE_FRAMEWORKS.pt_BR.md  COMPLIANCE_METHODOLOGY.md  COMPLIANCE_METHODOLOGY.pt_BR.md  COPYRIGHT_AND_TRADEMARK.md  COPYRIGHT_AND_TRADEMARK.pt_BR.md  GLOSSARY.md  GLOSSARY.pt_BR.md  GOVERNANCE_SERVICE_MANAGEMENT_PRIMER.md  GOVERNANCE_SERVICE_MANAGEMENT_PRIMER.pt_BR.md  GRC_EXECUTIVE_REPORT_SCHEMA.md  GRC_EXECUTIVE_REPORT_SCHEMA.pt_BR.md  HOSTING_AND_WEBSITE_OPTIONS.md  HOSTING_AND_WEBSITE_OPTIONS.pt_BR.md  ITSM_GOVERNANCE_ALIGNMENT.md  ITSM_GOVERNANCE_ALIGNMENT.pt_BR.md  JURISDICTION_COLLISION_HANDLING.md  JURISDICTION_COLLISION_HANDLING.pt_BR.md  LICENSE_FAQ.md  LICENSE_FAQ.pt_BR.md  LICENSING_OPEN_CORE_AND_COMMERCIAL.md  LICENSING_OPEN_CORE_AND_COMMERCIAL.pt_BR.md  LICENSING_SPEC.md  LICENSING_SPEC.pt_BR.md  MAP.md  MAP.pt_BR.md  OBSERVABILITY_SRE.md  OBSERVABILITY_SRE.pt_BR.md  OPERATOR_HELP_AUDIT.md  OPERATOR_HELP_AUDIT.pt_BR.md  PRIVATE_OPERATOR_NOTES.md  (+32 more)
logging_custom/: logger.py
pro/: engine.py  prefilter.py  worker_logic.py
report/: excel_sanitizer.py  generator.py  grc_export_multiformat.py  grc_reporter.py  nist_csf_hints.py  nist_csf_mapping.yaml
scanners/: data_scanner.py  db_connector.py  db_scanner.py  report_generator.py  scanner_factory.py
scripts/: add_plan_metadata.py  adr-ratify.ps1  ats-candidate-import.ps1  beastie-ecosystem-sync.ps1  beastie-ecosystem-sync.sh  benchmark-ab.ps1  build-rust-prefilter.ps1  build_locale_catalogs.py  build_rules_skills_hub.py  bundle-for-review.ps1  check-all-security-scans.ps1  check-all-security-scans.sh  check-all.ps1  check-all.sh  check-hubs.ps1  check-hubs.sh  check_hubs.py  completao-chat-starter.ps1  demo.sh  external-review-pack.ps1  gate-trailer-attest.ps1  gate-trailer-attest.sh  gate_change_tripwire.py  gate_trailer_attest.py  gatekeeper-audit.ps1  gatekeeper_audit.py  generate_build_digest.py  generate_release_manifest.py  generate_synthetic_poc_corpus.py  grype-image-gate.ps1  grype-image-gate.sh  image-inspect.ps1  image_inspect.py  inv-adr.ps1  issue_dev_license_jwt.py  lab-completao-container-smoke-original.sh  lab-completao-container-smoke.sh  lab-completao-container-smoke2.sh  lab-completao-host-smoke.sh  lab-completao-orchestrate-hybrid-v173-bkp.ps1  (+50 more)
security/: pii_gate_allowlist.txt  version_policy.yaml
tests/: adr_governance_support.py  conftest.py  operator_help_sync_manifest.py  test_about_version_matches_pyproject.py  test_adr_governance_phase1.py  test_adr_inventory_sync.py  test_adr_readme_index_sync.py  test_api_assessment_poc.py  test_api_findings_export.py  test_api_route_matrix_plan_sync.py  test_archives_scan_failures.py  test_audit.py  test_brazilian_cpf.py  test_build_digest.py  test_build_rules_skills_hub.py  test_check_hubs.py  test_claims_consistency.py  test_cli_demo.py  test_cli_diff.py  test_cli_presentation.py  test_cli_reporter_rca.py  test_cnpj_formats.py  test_commit_no_tool_coauthorship.py  test_compliance_samples.py  test_config_encoding.py  test_connector_tier_gating.py  test_courtesy_nudge.py  test_database.py  test_demo_entrypoint.py  test_demo_logs_1218.py  test_dependency_artifacts_sync.py  test_docker_image_hardening.py  test_docs_external_no_plan_links.py  test_dsar_export.py  test_engine.py  test_filesystem_connector.py  test_filesystem_scan_compressed_wiring.py  test_filesystem_symlink_guard.py  test_fingerprint_binding_deployments.py  test_forwarded_headers.py  (+65 more)
utils/: audit_log_display.py  cli_presentation.py  file_encoding.py  logger.py  ml_classifier.py  notify.py  report_gen.py  subtitle_text.py
(+642 files in other folders)
